--- a/css/music.css
+++ b/css/music.css
@@ -10,7 +10,7 @@
 }
 
 #bottom-row {
-        margin-bottom: 20px;
+        margin-bottom: 40px;
 }
 
 .col-md-6 h2{
