--- a/css/videos.css
+++ b/css/videos.css
@@ -15,6 +15,10 @@ body {
     font-family: 'Arvo', serif;
 }
 
+#bottom-row {
+  margin-bottom: 40px;
+}
+
 .col-md-6 h2{
 	text-align: center;
     color: #e74c3c;
